prost-reflect/tests/snapshots/main__message_reserved_range_overlap_with_field2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "field number '2' conflicts with extension range '1 to 5'"
related: []
severity: error

