prost-reflect/tests/snapshots/main__name_collision2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "name 'Message' is defined twice"
related: []
severity: error

