prost-reflect/tests/snapshots/main__name_collision3.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "name 'Message.foo' is defined twice"
related: []
severity: error

