prost-reflect/tests/snapshots/main__name_conflict3.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "name 'Foo' is defined twice"
related: []
severity: error

