prost-reflect/tests/snapshots/main__name_conflict_field_camel_case1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "camel-case name of field 'foo_bar' conflicts with field 'foobar'"
related: []
severity: error

