prost-reflect/tests/snapshots/main__name_conflict_field_camel_case2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "camel-case name of field 'foo' conflicts with field 'FOO'"
related: []
severity: error

