prost-reflect/tests/snapshots/main__name_conflict_in_imported_files.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "name 'Foo' is already defined in file 'dep1.proto'"
related: []
severity: error

