prost-reflect/tests/snapshots/main__name_conflict_package1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "name 'foo' is already defined in file 'dep.proto'"
related: []
severity: error

