prost-reflect/tests/snapshots/main__name_conflict_with_import.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "name 'Foo' is already defined in file 'dep.proto'"
related: []
severity: error

