prost-reflect/tests/snapshots/main__name_resolution1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "name '.foo.FooBar' is not defined"
related: []
severity: error

